# pattern-recognition-neural-network-coursework-1

./: .gitignore  INSTRUCTIONS.md  KERES_TUTORIAL.md  README.md  coursework.ipynb  pyproject.toml  verify.py
